# idle_champions_codes_api

./: .env.template  .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
.sqlx/: query-12d047a3e2de7d8a9f1a79b71ea6497810d2f59050e1ba0bb7a6ab0746f7c9f5.json  query-20d19fab25b158441e2042c1ff4688ea3c4f5eb77c77e07535ee5e7e218a43e9.json  query-356d524df76d86ed0ac8de538eae1b251cf701d75a2921f00019feab4c21e5bc.json  query-683913fa220ac5303290b3d3cc8200d27728c7f5437f5d905a23ace9f6d59992.json  query-84ea016103f6a1264799e6591d3b68f230a8a79596600f1157cab6717166f9ca.json  query-943425a55e54c92756712816a8a17dc1657a8ba1e37462c4aa93ab743db1abd9.json  query-9b56f2d6904a06ec4294b5262870e9f6a03da314f0aa86a33d0f741e3a269db0.json  query-9e1493b2d468dbeaf89c67a0ae14faa0a3a9e97059e81093c4fa483d545a3701.json
db/: dev_seeds.sql
db/migrations/: 0_init.sql
src/: auth.rs  main.rs  util.rs  web.rs
src/db/: api_key.rs  code.rs  mod.rs  source.rs
