[package]
name = "idle_champions_codes"
description = "Web interface + DB for idle champion codes"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Zarthus <zarthus@liefland.net>",
]
repository = "https://github.com/Liefland/idle_champions_codes_api"
homepage = "https://codes.idlechampions.liefland.net/"
categories = []
keywords = []
readme = "README.md"
publish = false

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.197"
anyhow = "1.0.83"
rocket_db_pools = {  version = "0.1.0", features = ["sqlx_postgres", "sqlx_macros"] }
time = "0.3.31"

# Ensure it is the same: https://github.com/rwf2/Rocket/blob/master/contrib/db_pools/lib/Cargo.toml#L80
[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "runtime-tokio-rustls", "postgres", "time"]

[features]
default = [
    "debug_errors"
]
debug_errors = [] # Include raw error messages in JSON responses, useful for dev, not recommended for prod.
migrate = ["sqlx/migrate"]

[badges]
